--- a/src/styles/components/projects.module.scss
+++ b/src/styles/components/projects.module.scss
@@ -37,18 +37,18 @@
   text-shadow: variables.$shadow-full;
 }
 
-.project_header::before {
-  content: "";
-  height: 0.5rem;
-  width: 7.5rem;
-  background: variables.$normal-gradient;
-  position: absolute;
-  margin-left: 25px;
-  z-index: -1;
-  border-radius: 0.25rem;
-  bottom: 1.5rem;
-  transform: rotate3d(1, 1, 1, 180deg);
-}
+// .project_header::before {
+//   content: "";
+//   height: 0.5rem;
+//   width: 7.5rem;
+//   background: variables.$normal-gradient;
+//   position: absolute;
+//   margin-left: 25px;
+//   z-index: -1;
+//   border-radius: 0.25rem;
+//   bottom: 1.5rem;
+//   transform: rotate3d(1, 1, 1, 180deg);
+// }
 
 .project_header::after {
   content: "001";
@@ -145,7 +145,7 @@
   font-weight: 300;
   margin-right: 1rem;
   font-size: 0.8rem;
-  color: variables.$primary-color-light;
+  color: variables.$green;
 }
 
 .more_projects {
